--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Pricelist Mobile Legends – Indonesia</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      font-family: Roboto, sans-serif;
+      background: #C9DBF0;
       margin: 0;
       padding: 20px;
     }
