Fix message formatting in order confirmation

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
       const price = document.getElementById('orderPrice').value.trim();
 
       const message =
-        'Order MLBB\n' +
+        '**Order Diamond MLBB Indonesia**\n' +
         'User ID (Server): ' + userId + '\n' +
         'Nickname in game: ' + nickname + '\n' +
         'Jumlah order: ' + item + '\n' +
