--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Roboto, sans-serif;
-      background: #C9DBF0;
+      background: #00000;
       margin: 0;
       padding: 20px;
     }
