Decrease font sizes in index.html
Reduced font sizes for various elements in the stylesheet.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     h1 {
       text-align: center;
       margin-bottom: 8px;
-      font-size: 24px;
+      font-size: 18px;
     }
     .subtitle {
       text-align: center;
       margin-bottom: 24px;
       color: #555;
-      font-size: 14px;
+      font-size: 12px;
     }
     .section-title {
       font-size: 18px;
@@ -50,7 +50,7 @@
       background: #fafafa;
       margin-bottom: 6px;
       border: 1px solid #eee;
-      font-size: 14px;
+      font-size: 10px;
       cursor: pointer; /* biar kerasa bisa diklik */
       transition: background 0.15s, transform 0.05s;
     }
@@ -65,10 +65,7 @@
       font-weight: 500;
     }
     .item-code {
-      display: block;
-      font-size: 11px;
-      color: #888;
-      margin-top: 2px;
+      display: none
     }
     .item-price {
       font-weight: 600;
@@ -84,14 +81,14 @@
       margin-top: 8px;
     }
     form label {
-      font-size: 13px;
+      font-size: 12px;
       margin-top: 4px;
     }
     form input {
       padding: 8px;
       border-radius: 8px;
       border: 1px solid #dddddd;
-      font-size: 13px;
+      font-size: 10px;
     }
     form button[type="submit"] {
       margin-top: 10px;
@@ -102,7 +99,7 @@
       cursor: pointer;
       background: #25d366; /* warna WhatsApp */
       color: #ffffff;
-      font-size: 14px;
+      font-size: 13px;
     }
   </style>
 </head>
