Update button background color in index.html
Changed button background color from WhatsApp green to a light blue.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       border-radius: 999px;
       font-weight: 600;
       cursor: pointer;
-      background: #25d366; /* warna WhatsApp */
+      background: #C9DBF0; 
       color: #ffffff;
       font-size: 13px;
     }
@@ -106,7 +106,6 @@
 <body>
   <div class="container">
     <h1>Mobile Legends – Indonesia</h1>
-    <div class="subtitle">Pricelist Diamonds &amp; Pass (klik pricebox untuk isi form)</div>
 
     <div class="section">
       <div class="section-title">Diamonds (Small)</div>
