Change button background color to #4E5E7D

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       border-radius: 999px;
       font-weight: 600;
       cursor: pointer;
-      background: #C9DBF0; 
+      background: #4E5E7D; 
       color: #ffffff;
       font-size: 13px;
     }
