Remove 'First Top Up' diamond options from index.html
Removed multiple 'First Top Up' diamond options from the pricelist.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
   <div class="container">
     <h1>Mobile Legends – Indonesia</h1>
 
+       <div class="section">
+      <div class="section-title">Double Diamond — First Top Up</div>
+      <ul class="pricelist">
+        <li data-item="100 (50+50) Diamonds - First Top Up" data-price="16623">
+          <span class="item-name">100 (50+50) Diamonds - First Top Up<span class="item-code">MLBB_ID_100TU</span></span>
+          <span class="item-price"></span>
+        </li>
+        <li data-item="300 (150+150) Diamonds - First Top Up" data-price="47823">
+          <span class="item-name">300 (150+150) Diamonds - First Top Up<span class="item-code">MLBB_ID_300TU</span></span>
+          <span class="item-price"></span>
+        </li>
+        <li data-item="500 (250+250) Diamonds - First Top Up" data-price="79528">
+          <span class="item-name">500 (250+250) Diamonds - First Top Up<span class="item-code">MLBB_ID_500TU</span></span>
+          <span class="item-price"></span>
+        </li>
+        <li data-item="1000 (500+500) Diamonds - First Top Up" data-price="159801">
+          <span class="item-name">1000 (500+500) Diamonds - First Top Up<span class="item-code">MLBB_ID_1000TU</span></span>
+          <span class="item-price"></span>
+        </li>
+      </ul>
+       </div>
+        
     <div class="section">
       <div class="section-title">Diamonds (Small)</div>
       <ul class="pricelist">
@@ -200,10 +222,6 @@
         </li>
         <li data-item="59 (53+6) Diamonds" data-price="16553">
           <span class="item-name">59 (53+6) Diamonds<span class="item-code">MLBB_ID_59</span></span>
-          <span class="item-price"></span>
-        </li>
-        <li data-item="100 (50+50) Diamonds - First Top Up" data-price="16623">
-          <span class="item-name">100 (50+50) Diamonds - First Top Up<span class="item-code">MLBB_ID_100TU</span></span>
           <span class="item-price"></span>
         </li>
         <li data-item="60 (55+5) Diamonds" data-price="17754">
@@ -354,10 +372,6 @@
           <span class="item-name">170 (154+16) Diamonds<span class="item-code">MLBB_ID_170</span></span>
           <span class="item-price"></span>
         </li>
-        <li data-item="300 (150+150) Diamonds - First Top Up" data-price="47823">
-          <span class="item-name">300 (150+150) Diamonds - First Top Up<span class="item-code">MLBB_ID_300TU</span></span>
-          <span class="item-price"></span>
-        </li>
         <li data-item="176 (160+16) Diamonds" data-price="48402">
           <span class="item-name">176 (160+16) Diamonds<span class="item-code">MLBB_ID_176</span></span>
           <span class="item-price"></span>
@@ -388,10 +402,6 @@
         </li>
         <li data-item="296 (256+40) Diamonds" data-price="79137">
           <span class="item-name">296 (256+40) Diamonds<span class="item-code">MLBB_ID_296</span></span>
-          <span class="item-price"></span>
-        </li>
-        <li data-item="500 (250+250) Diamonds - First Top Up" data-price="79528">
-          <span class="item-name">500 (250+250) Diamonds - First Top Up<span class="item-code">MLBB_ID_500TU</span></span>
           <span class="item-price"></span>
         </li>
         <li data-item="305 (276+29) Diamonds" data-price="83426">
@@ -428,10 +438,6 @@
         </li>
         <li data-item="554 (500+54) Diamonds" data-price="150767">
           <span class="item-name">554 (500+54) Diamonds<span class="item-code">MLBB_ID_554</span></span>
-          <span class="item-price"></span>
-        </li>
-        <li data-item="1000 (500+500) Diamonds - First Top Up" data-price="159801">
-          <span class="item-name">1000 (500+500) Diamonds - First Top Up<span class="item-code">MLBB_ID_1000TU</span></span>
           <span class="item-price"></span>
         </li>
         <li data-item="716 (637+79) Diamonds" data-price="188652">
